# university-db

./: CMakeLists.txt  Person.hpp  Student.hpp  Worker.hpp  main.cpp  person.hpp  student.cpp  student.hpp  test.cpp  utils.cpp  utils.hpp
.github/workflows/: main.yml
test/: catch_main.cpp  test_catch2.cpp
